--- a/Aleks's Stuff/lab4cProjectVersion/lab4cProjectVersion/08-CrUD-Lab-Update-Inherit-solution/flaskDemo/templates/ordercontents_home.html
+++ b/Aleks's Stuff/lab4cProjectVersion/lab4cProjectVersion/08-CrUD-Lab-Update-Inherit-solution/flaskDemo/templates/ordercontents_home.html
@@ -7,7 +7,7 @@
               <a class="mr-2" href="#">{{ row }}</a>		  
               <small class="text-muted">{{ row['orderid'] }}  {{ row['itemid'] }}</small>		  
             </div>
-			<h2><a class="article-title" href="{{ url_for('assign', orderid=row.orderid, itemid=row.itemid) }}">OrderID: {{ row.orderID }}</a></h2>
+			<h2><a class="article-title" href="{{ url_for('assign', orderid=row.orderid, itemid=row.itemid) }}">Order_Contents (ItemID, OrderID)</a></h2>
            
           </div>
         </article>
