--- a/sushi_app/templates/layout.html
+++ b/sushi_app/templates/layout.html
@@ -28,7 +28,7 @@
             <div class="navbar-nav mr-auto">
               <a class="nav-item nav-link" href="{{ url_for('home') }}">Home</a>
               <a class="nav-item nav-link" href="{{ url_for('about') }}">About</a>
-              <a class="nav-item nav-link" href="{{ url_for('place_order') }}">Order</a>
+              <a class="nav-item nav-link" href="{{ url_for('place_order', current_order=0) }}">Order</a>
               <a class="nav-item nav-link" href="{{ url_for('assign_staff') }}">Assign Staff</a>
               <a class="nav-item nav-link" href="{{ url_for('list_order_items') }}">List Orders</a>
             </div>
