--- a/sushi_app/templates/orderList.html
+++ b/sushi_app/templates/orderList.html
@@ -1,15 +1,34 @@
 {% extends "layout.html" %}
 {% block content %}
+<h1>{{current_user.first_name}} {{current_user.last_name}}'s Orders</h1>
+<br>
     {% for order in order_items %}
         <article class="media content-section">
           <div class="media-body">
             <div class="article-metadata">
                 <h2><a class="article-title" href="{{ url_for('update_order', order_id=order) }}">Order Number: {{ order }}</a></h2>
             </div>
-            {% for item in order_items[order] %}
-            <p class="article-content">Placed on: {{item[-1]}}</p>
-            <p class="article-content">Item ID: {{item[0]}} Item Name: {{item[1]}}. Quantity Ordered: {{item[2]}}</p>
+            <h5>Order Date: {{order_items[order][0][3]}}</h3>
+            <style type="text/css">
+              .tg  {border-collapse:collapse;border-spacing:0;border-color:#ccc;}
+              .tg td{font-family:Arial, sans-serif;font-size:14px;padding:10px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;border-color:#ccc;color:#333;background-color:#fff;}
+              .tg th{font-family:Arial, sans-serif;font-size:14px;font-weight:normal;padding:10px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;border-color:#ccc;color:#333;background-color:#f0f0f0;}
+              .tg .tg-cly1{text-align:left;vertical-align:middle}
+              </style>
+              <table class="tg">
+                <tr>
+                  <th class="tg-cly1">Item ID</th>
+                  <th class="tg-cly1">Item Name<br></th>
+                  <th class="tg-cly1">Quantity Ordered</th>
+                </tr>
+                {% for item in order_items[order] %}
+                  <tr>
+                    <th class="tg-cly1">{{item[0]}}</th>
+                    <th class="tg-cly1">{{item[1]}}</th>
+                    <th class="tg-cly1"><span>{{item[2]}}</span></th>
+                  </tr>
             {% endfor %}
+          </table>
           </div>
         </article>
     {% endfor %}
