--- a/sushi_app/templates/assign.html
+++ b/sushi_app/templates/assign.html
@@ -4,7 +4,7 @@
     <form method="POST" action="">
         {{ form.hidden_tag() }}
         <fieldset class="form-group">
-            <h1>Ordering as: {{current_user}}</h1>
+            <h1>Reassign a staff member</h1>
             <legend class="border-bottom mb-4">{{ legend }}</legend>
 
             <div class="form-group">
