--- a/sushi_app/templates/order.html
+++ b/sushi_app/templates/order.html
@@ -12,7 +12,11 @@
               <h2>{{ item.name }}</h2>
             </div>
             <p class="article-content">Price: {{ item.cost }} $</p>
+            {% if item.item_id not in current_item_ids %}
             <a class="btn btn-secondary btn-sm mt-1 mb-1" href="{{ url_for('add_item', item_id=item.item_id, order_id=order.order_id) }}">Add to Order</a>
+            {% else %}
+            <a class="btn btn-secondary btn-sm mt-1 mb-1" href="{{ url_for('edit_item', item_id=item.item_id, order_id=order.order_id) }}">Edit Quantity or Delete Item</a>
+            {% endif %}
           </div>
         </article>
         {% endfor %}
