--- a/Aleks's Stuff/project_repo-masterversion/sushi_app/templates/home.html
+++ b/Aleks's Stuff/project_repo-masterversion/sushi_app/templates/home.html
@@ -2,13 +2,24 @@
 {% extends "layout.html" %}
 {% block content %}
 	<style>
-	
-	
+
 		body {
 			background-image: url('https://cmkt-image-prd.freetls.fastly.net/0.1.0/ps/4056304/910/607/m2/fpnw/wm1/vxe366bopjmfzyzyimmkqfb7t0gtau1metavpmx8jyplaectvo0sc0y2cwxs7kte-.jpg?1519553652&s=f202e1127b47913a2e44e1c07a37cc6b');
 		}
 		
+		img {
+			height: 100px;
+			width: 100px;
+		}
+		
 	</style>
+{% block intro %}
+<h1>About us</h1>
+<article class ="media content-section">
+<p>A test-page for the Sushi Bar project by Aleks, Ethan, Duncan, and Laura. We are a group of students who strive to bring a new sushi website experience to our classmates, friends, and anybody with a love for sushi! </p>
+</article>
+{% endblock intro %}
+
 {% block apps %}
 <h1>Appetizers</h1>
     {% for item in items %}
@@ -16,8 +27,22 @@
 	<article class ="media content-section">
 				<ul>
 					<h2>{{ item.name }}</h1>
-					<h3>{{ item.cost }}</h2>
-					<br>
+					<h3>Price: ${{ item.cost }}</h2>
+					{% if item['name'] =="Edamame" %}
+						<img src="https://toppng.com/uploads/preview/edamame-image-11526025002nvbk6gblxj.png">
+					{% endif %}
+					{% if item['name'] =="Takoyaki" %}
+						<img src="https://image.shutterstock.com/image-photo/japanese-food-takoyaki-on-black-260nw-1482117797.jpg">
+					{% endif %}
+					{% if item['name'] =="Gyoza" %}
+						<img src="https://image.shutterstock.com/image-photo/japanese-dumplings-gyoza-pork-meat-260nw-1079722199.jpg">
+					{% endif %}
+					{% if item['name'] =="Age-Dashi Tofu" %}
+						<img src="https://pickledplum.com/wp-content/uploads/2012/05/agedashi-tofu-square.jpg">
+					{% endif %}
+					{% if item['name'] =="Crab Rangoon" %}
+						<img src="https://www.thespruceeats.com/thmb/Pl1NY9b8oJqQKrlPYRIh4l2v0hE=/1500x844/smart/filters:no_upscale()/crabrangoons-5a7bcae1875db90037030a81.jpg">
+					{% endif %}					
 				</ul>
 		</article>
 	{% endif %}
@@ -31,8 +56,16 @@
 	<article class ="media content-section">
 				<ul>
 					<h2>{{ item.name }}</h1>
-					<h3>{{ item.cost }}</h2>
-					<br>
+					<h3>Price: ${{ item.cost }}</h2>
+					{% if item['name'] =="Miso Soup" %}
+						<img src="https://www.thespruceeats.com/thmb/QRsC7OGiM71nSYq3xtW8eeqRRNQ=/4000x3000/smart/filters:no_upscale()/basic-miso-soup-3377886_09-5b3f7fb6c9e77c00378bf68f.jpg">
+					{% endif %}
+					{% if item['name'] =="Tom Kha Soup" %}
+						<img src="https://rasamalaysia.com/wp-content/uploads/2013/12/tom-kha-gai-thumb-500x375.jpg">
+					{% endif %}
+					{% if item['name'] =="Tonkotsu Ramen" %}
+						<img src="https://glebekitchen.com/wp-content/uploads/2017/04/tonkotsuramenfront.jpg">
+					{% endif %}
 				</ul>
 		</article>
 	{% endif %}
@@ -46,8 +79,28 @@
 	<article class ="media content-section">
 				<ul>
 					<h2>{{ item.name }}</h1>
-					<h3>{{ item.cost }}</h2>
-					<br>
+					<h3>Price: ${{ item.cost }}</h2>
+					{% if item['name'] =="Shrimp Tempura" %}
+						<img src="https://club.cooking/wp-content/uploads/2019/04/Shrimp-Tempura-Roll-prev.jpg">
+					{% endif %}
+					{% if item['name'] =="Chicken Katsu" %}
+						<img src="https://dinnerthendessert.com/wp-content/uploads/2019/02/Chicken-Katsu-2.jpg">
+					{% endif %}
+					{% if item['name'] =="Panang Curry" %}
+						<img src="https://www.whiskaffair.com/wp-content/uploads/2018/05/Panang-Curry-4.jpg">
+					{% endif %}	
+					{% if item['name'] =="Salmon Roll" %}
+						<img src="https://www.getfish.com.au/wp-content/uploads/2017/09/fresh-salmon-sushi-rolls.jpg">
+					{% endif %}
+					{% if item['name'] =="Philly Maki" %}
+						<img src="https://image.shutterstock.com/image-photo/philadelphia-maki-sushi-roll-made-600w-52968904.jpg">
+					{% endif %}
+					{% if item['name'] =="Spicy Tuna Maki" %}
+						<img src="https://www.justonecookbook.com/wp-content/uploads/2013/05/Spicy-Tuna-Roll-500x400.jpg">
+					{% endif %}
+					{% if item['name'] =="Dragon Maki" %}
+						<img src="https://www.justonecookbook.com/wp-content/uploads/2016/04/Dragon-Roll-New.jpg">
+					{% endif %}					
 				</ul>
 		</article>
 	{% endif %}
@@ -61,8 +114,13 @@
 	<article class ="media content-section">
 				<ul>
 					<h2>{{ item.name }}</h1>
-					<h3>{{ item.cost }}</h2>
-					<br>
+					<h3>Price: ${{ item.cost }}</h2>
+					{% if item['name'] =="Mixed Greens Salad" %}
+						<img src="https://www.simplyrecipes.com/wp-content/uploads/2009/02/mixed-green-salad-pecans-vertical-a-1800.jpg">
+					{% endif %}
+					{% if item['name'] =="Tuna Avocado Salad" %}
+						<img src="https://www.dinneratthezoo.com/wp-content/uploads/2018/01/avocado-tuna-salad-13.jpg">
+					{% endif %}					
 				</ul>
 		</article>
 	{% endif %}
@@ -76,8 +134,16 @@
 	<article class ="media content-section">
 				<ul>
 					<h2>{{ item.name }}</h1>
-					<h3>{{ item.cost }}</h2>
-					<br>
+					<h3>Price: ${{ item.cost }}</h2>
+					{% if item['name'] =="Soft Drink" %}
+						<img src="https://cdn.cdnparenting.com/articles/2018/07/361921454-H.jpg">
+					{% endif %}
+					{% if item['name'] =="Thai Iced Tea" %}
+						<img src="https://theforkedspoon.com/wp-content/uploads/2018/06/Thai-Tea-Recipe-8.jpg">
+					{% endif %}
+					{% if item['name'] =="Green Tea" %}
+						<img src="https://c.ndtvimg.com/2019-03/6h6v6png_green-tea_625x300_08_March_19.jpg">
+					{% endif %}					
 				</ul>
 		</article>
 	{% endif %}
