Add some additional SQL queries to satify project requirements.

--- a/sushi_app/templates/reviewOrder.html
+++ b/sushi_app/templates/reviewOrder.html
@@ -20,6 +20,7 @@
 
 
             <h3>Order Details</h3>
+            <h5>Only {{total_items}} kinds of items in your cart! Click "Edit Order" to add more!</h5>
             <table class="tg">
               <tr>
                 <th class="tg-cly1"><h5>Item ID</h5></th>
