--- a/sushi_app/templates/assign.html
+++ b/sushi_app/templates/assign.html
@@ -3,8 +3,9 @@
 <div class="content-section">
     <form method="POST" action="">
         {{ form.hidden_tag() }}
+        <h1>Admin View And Controls</h1>
         <fieldset class="form-group">
-            <h1>Reassign a staff member</h1>
+            <h2>Reassign a staff member</h2>
             <legend class="border-bottom mb-4">{{ legend }}</legend>
 
             <div class="form-group">
@@ -36,6 +37,32 @@
         <div class="form-group">
             {{ form.submit(class="btn btn-outline-info") }}
         </div>
+        <style type="text/css">
+            .tg  {border-collapse:collapse;border-spacing:0;border-color:#ccc;}
+            .tg td{font-family:Arial, sans-serif;font-size:14px;padding:10px 20px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;border-color:#ccc;color:#333;background-color:#fff;}
+            .tg th{font-family:Arial, sans-serif;font-size:14px;font-weight:normal;padding:10px 30px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;border-color:#ccc;color:#333;background-color:#f0f0f0;}
+            .tg .tg-cly1{text-align:left;vertical-align:middle}
+            </style>
+        <fieldset class="form-group">
+            <h2>Ordering Customers</h2>
+            <legend class="border-bottom mb-4">{{ legend }}</legend>
+            <table class="tg">
+                <tr>
+                  <th class="tg-cly1"><h5>Customer ID</h5></th>
+                  <th class="tg-cly1"><h5>First Name</h5><br></th>
+                  <th class="tg-cly1"><h5>Last Name</h5></th>
+                </tr>
+                {% for customer in ordering_customers %}
+                  <tr>
+                    <th class="tg-cly1">{{customer[0]}}</th>
+                    <th class="tg-cly1">{{customer[1]}}</th>
+                    <th class="tg-cly1"><span>{{customer[2]}}</th>
+                  </tr>
+            {% endfor %}
+          </table>
+
+        </fieldset>
+
     </form>
 </div>
 {% endblock content %}
