--- a/sushi_app/templates/orderList.html
+++ b/sushi_app/templates/orderList.html
@@ -6,29 +6,33 @@
         <article class="media content-section">
           <div class="media-body">
             <div class="article-metadata">
-                <h2><a class="article-title" href="{{ url_for('update_order', order_id=order) }}">Order Number: {{ order }}</a></h2>
+                <h2>Order on {{order_items[order][0][5]}}</h2>
             </div>
-            <h5>Order Date: {{order_items[order][0][3]}}</h3>
             <style type="text/css">
               .tg  {border-collapse:collapse;border-spacing:0;border-color:#ccc;}
-              .tg td{font-family:Arial, sans-serif;font-size:14px;padding:10px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;border-color:#ccc;color:#333;background-color:#fff;}
-              .tg th{font-family:Arial, sans-serif;font-size:14px;font-weight:normal;padding:10px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;border-color:#ccc;color:#333;background-color:#f0f0f0;}
+              .tg td{font-family:Arial, sans-serif;font-size:14px;padding:10px 20px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;border-color:#ccc;color:#333;background-color:#fff;}
+              .tg th{font-family:Arial, sans-serif;font-size:14px;font-weight:normal;padding:10px 20px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;border-color:#ccc;color:#333;background-color:#f0f0f0;}
               .tg .tg-cly1{text-align:left;vertical-align:middle}
               </style>
-              <table class="tg">
+              <br>
+               <table class="tg">
                 <tr>
-                  <th class="tg-cly1">Item ID</th>
-                  <th class="tg-cly1">Item Name<br></th>
-                  <th class="tg-cly1">Quantity Ordered</th>
+                  <th class="tg-cly1"><h5>Item Name</h5><br></th>
+                  <th class="tg-cly1"><h5>Quantity Ordered</h5></th>
+                  <th class="tg-cly1"><h5>Item Cost</h5></th>
+                  <th class="tg-cly1"><h5>Item Total</h5></th>
                 </tr>
                 {% for item in order_items[order] %}
-                  <tr>
-                    <th class="tg-cly1">{{item[0]}}</th>
-                    <th class="tg-cly1">{{item[1]}}</th>
-                    <th class="tg-cly1"><span>{{item[2]}}</span></th>
-                  </tr>
+                <tr>
+                  <th class="tg-cly1">{{item[1]}}</th>
+                  <th class="tg-cly1"><span>{{item[4]}}</span></th>
+                  <th class="tg-cly1"><span>{{item[3]}}</span></th>
+                  <th class="tg-cly1"><span>{{item[4] * item[3]}}</span></th>
+                </tr>
             {% endfor %}
           </table>
+          <br>
+          <h5>Grand Total: </h5>
           </div>
         </article>
     {% endfor %}
