--- a/sushi_app/templates/assign.html
+++ b/sushi_app/templates/assign.html
@@ -1,5 +1,11 @@
 {% extends "layout.html" %}
+
 {% block content %}
+<style>
+	body {
+			background-image: url('https://images3.alphacoders.com/467/thumb-1920-46709.jpg');
+		}
+</style>
 <div class="content-section">
     <form method="POST" action="">
         {{ form.hidden_tag() }}
