--- a/sushi_app/templates/orderList.html
+++ b/sushi_app/templates/orderList.html
@@ -22,7 +22,7 @@
                   <th class="tg-cly1"><h5>Item Cost</h5></th>
                   <th class="tg-cly1"><h5>Item Total</h5></th>
                 </tr>
-                {% for item in order_items[order] %}
+                {% for item in order_items[order][:-1] %}
                 <tr>
                   <th class="tg-cly1">{{item[1]}}</th>
                   <th class="tg-cly1"><span>{{item[4]}}</span></th>
@@ -32,7 +32,7 @@
             {% endfor %}
           </table>
           <br>
-          <h5>Grand Total: </h5>
+          <h5>Grand Total: {{order_items[order][-1]}}</h5>
           </div>
         </article>
     {% endfor %}
