Actually fix grand total bug

--- a/sushi_app/templates/orderList.html
+++ b/sushi_app/templates/orderList.html
@@ -32,7 +32,7 @@
             {% endfor %}
           </table>
           <br>
-          <h5>Grand Total: {{order_items[order][-1]}}</h5>
+          <h5>Grand Total: {{order_items[order][-1]}} $</h5>
           </div>
         </article>
     {% endfor %}
